add extra tests